@@ -1,4 +1,5 @@
 0.9-15
+- landsat summary and plot improvements
 - change data(met) to be during Hurricane Juan
 
 0.9-14
